terraform/modules/ecs/main.tf
 
/*====
Cloudwatch Log Group
======*/
resource "aws_cloudwatch_log_group" "rails_terraform" {
  name = "rails_terraform"

  tags = {
    Environment = "${var.environment}"
    Application = "rails_terraform"
  }
}

/*====
ECR repository to store our Docker images
======*/
resource "aws_ecr_repository" "rails_terraform_app" {
  name = "${var.repository_name}"
}

/*====
ECS cluster
======*/
resource "aws_ecs_cluster" "cluster" {
  name = "${var.environment}-ecs-cluster"
}

/*====
ECS task definitions
======*/

/* the task definition for the web service */
data "template_file" "web_task" {
  template = "${file("${path.module}/tasks/web_task_definition.json")}"

  vars = {
    image           = "${aws_ecr_repository.rails_terraform_app.repository_url}"
    secret_key_base = "${var.secret_key_base}"
    database_url    = "postgresql://${var.database_username}:${var.database_password}@${var.database_endpoint}:5432/${var.database_name}?encoding=utf8&pool=40"
    log_group       = "${aws_cloudwatch_log_group.rails_terraform.name}"
  }
}

resource "aws_ecs_task_definition" "web" {
  family                   = "${var.environment}_web"
  container_definitions    = "${data.template_file.web_task.rendered}"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = "256"
  memory                   = "1024"
  execution_role_arn       = "${aws_iam_role.ecs_execution_role.arn}"
  task_role_arn            = "${aws_iam_role.ecs_execution_role.arn}"
}

/* the task definition for the db migration */
data "template_file" "db_migrate_task" {
  template = "${file("${path.module}/tasks/db_migrate_task_definition.json")}"

  vars = {
    image           = "${aws_ecr_repository.rails_terraform_app.repository_url}"
    secret_key_base = "${var.secret_key_base}"
    database_url    = "postgresql://${var.database_username}:${var.database_password}@${var.database_endpoint}:5432/${var.database_name}?encoding=utf8&pool=40"
    log_group       = "rails_terraform"
  }
}

resource "aws_ecs_task_definition" "db_migrate" {
  family                   = "${var.environment}_db_migrate"
  container_definitions    = "${data.template_file.db_migrate_task.rendered}"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = "256"
  memory                   = "512"
  execution_role_arn       = "${aws_iam_role.ecs_execution_role.arn}"
  task_role_arn            = "${aws_iam_role.ecs_execution_role.arn}"
}

/*====
App Load Balancer
======*/
resource "random_id" "target_group_sufix" {
  byte_length = 2
}

resource "aws_alb_target_group" "alb_target_group" {
  name     = "${var.environment}-alb-target-group-${random_id.target_group_sufix.hex}"
  port     = 443
  protocol = "HTTPS"
  vpc_id   = "${var.vpc_id}"
  target_type = "ip"
 
  stickiness {
    enabled = true
    type    = "lb_cookie"
  }

  lifecycle {
    create_before_destroy = true
  }
}

/* security group for ALB */
resource "aws_security_group" "web_inbound_sg" {
  name        = "${var.environment}-web-inbound-sg"
  description = "Allow HTTP from Anywhere into ALB"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    
  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.environment}-web-inbound-sg"
  }
}

resource "aws_alb" "alb_rails-terraform" {
  name            = "${var.environment}-alb-rails-terraform"
  subnets         = "${var.public_subnet_ids}"
  security_groups = "${concat(var.security_groups_ids, [aws_security_group.web_inbound_sg.id])}"

  tags = {
    Name        = "${var.environment}-alb-rails_terraform"
    Environment = "${var.environment}"
  }
}

resource "aws_alb_listener" "rails_terraform" {
  load_balancer_arn = "${aws_alb.alb_rails-terraform.arn}"
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  depends_on        = ["aws_alb_target_group.alb_target_group"]
  certificate_arn   = "arn:aws:acm:ca-central-1:628132563466:certificate/cabc2dde-3976-4dc4-9000-0590bb28bb7c"

  default_action {
    target_group_arn = "${aws_alb_target_group.alb_target_group.arn}"
    type             = "forward"
  }
}

/*
* IAM service role
*/
data "aws_iam_policy_document" "ecs_service_role" {
  statement {
    effect = "Allow"
    actions = ["sts:AssumeRole"]
    principals {
      type = "Service"
      identifiers = ["ecs.amazonaws.com"]
    }
  }
}

resource "aws_iam_role" "ecs_role" {
  name               = "ecs_role"
  assume_role_policy = "${data.aws_iam_policy_document.ecs_service_role.json}"
}

data "aws_iam_policy_document" "ecs_service_policy" {
  statement {
    effect = "Allow"
    resources = ["*"]
    actions = [
      "elasticloadbalancing:Describe*",
      "elasticloadbalancing:DeregisterInstancesFromLoadBalancer",
      "elasticloadbalancing:RegisterInstancesWithLoadBalancer",
      "ec2:Describe*",
      "ec2:AuthorizeSecurityGroupIngress"
    ]
  }
}

/* ecs service scheduler role */
resource "aws_iam_role_policy" "ecs_service_role_policy" {
  name   = "ecs_service_role_policy"
  #policy = "${file("${path.module}/policies/ecs-service-role.json")}"
  policy = "${data.aws_iam_policy_document.ecs_service_policy.json}"
  role   = "${aws_iam_role.ecs_role.id}"
}

/* role that the Amazon ECS container agent and the Docker daemon can assume */
resource "aws_iam_role" "ecs_execution_role" {
  name               = "ecs_task_execution_role"
  assume_role_policy = "${file("${path.module}/policies/ecs-task-execution-role.json")}"
}

resource "aws_iam_role_policy" "ecs_execution_role_policy" {
  name   = "ecs_execution_role_policy"
  policy = "${file("${path.module}/policies/ecs-execution-role-policy.json")}"
  role   = "${aws_iam_role.ecs_execution_role.id}"
}

/*====
ECS service
======*/

/* Security Group for ECS */
resource "aws_security_group" "ecs_service" {
  vpc_id      = "${var.vpc_id}"
  name        = "${var.environment}-ecs-service-sg"
  description = "Allow egress from container"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.environment}-ecs-service-sg"
    Environment = "${var.environment}"
  }
}

/* Simply specify the family to find the latest ACTIVE revision in that family */
data "aws_ecs_task_definition" "web" {
  task_definition = "${aws_ecs_task_definition.web.family}"
  depends_on = [ "aws_ecs_task_definition.web" ]
}

resource "aws_ecs_service" "web" {
  name            = "${var.environment}-web"
  task_definition = "${aws_ecs_task_definition.web.family}:${max("${aws_ecs_task_definition.web.revision}", "${data.aws_ecs_task_definition.web.revision}")}"
  desired_count   = 1
  launch_type     = "FARGATE"
  cluster =       "${aws_ecs_cluster.cluster.id}"
  depends_on      = ["aws_iam_role_policy.ecs_service_role_policy", "aws_alb_target_group.alb_target_group"]

  network_configuration {
    security_groups = "${concat(var.security_groups_ids, [aws_security_group.ecs_service.id])}"
    subnets         = "${var.subnets_ids}"
  }

  load_balancer {
    target_group_arn = "${aws_alb_target_group.alb_target_group.arn}"
    container_name   = "web"
    container_port   = "3000"
  }

  #depends_on = ["aws_alb_target_group.alb_target_group"]
}


# /*====
# Auto Scaling for ECS
# ======*/

# resource "aws_iam_role" "ecs_autoscale_role" {
#   name               = "${var.environment}_ecs_autoscale_role"
#   assume_role_policy = "${file("${path.module}/policies/ecs-autoscale-role.json")}"
# }
# resource "aws_iam_role_policy" "ecs_autoscale_role_policy" {
#   name   = "ecs_autoscale_role_policy"
#   policy = "${file("${path.module}/policies/ecs-autoscale-role-policy.json")}"
#   role   = "${aws_iam_role.ecs_autoscale_role.id}"
# }

# resource "aws_appautoscaling_target" "target" {
#   service_namespace  = "ecs"
#   resource_id        = "service/${aws_ecs_cluster.cluster.name}/${aws_ecs_service.web.name}"
#   scalable_dimension = "ecs:service:DesiredCount"
#   role_arn           = "${aws_iam_role.ecs_autoscale_role.arn}"
#   min_capacity       = 1
#   max_capacity       = 2
# }

# resource "aws_appautoscaling_policy" "up" {
#   name                    = "${var.environment}_scale_up"
#   service_namespace       = "ecs"
#   resource_id             = "service/${aws_ecs_cluster.cluster.name}/${aws_ecs_service.web.name}"
#   scalable_dimension      = "ecs:service:DesiredCount"


#   step_scaling_policy_configuration {
#     adjustment_type         = "ChangeInCapacity"
#     cooldown                = 60
#     metric_aggregation_type = "Maximum"

#     step_adjustment {
#       metric_interval_lower_bound = 0
#       scaling_adjustment = 1
#     }
#   }

#   depends_on = ["aws_appautoscaling_target.target"]
# }

# resource "aws_appautoscaling_policy" "down" {
#   name                    = "${var.environment}_scale_down"
#   service_namespace       = "ecs"
#   resource_id             = "service/${aws_ecs_cluster.cluster.name}/${aws_ecs_service.web.name}"
#   scalable_dimension      = "ecs:service:DesiredCount"

#   step_scaling_policy_configuration {
#     adjustment_type         = "ChangeInCapacity"
#     cooldown                = 60
#     metric_aggregation_type = "Maximum"

#     step_adjustment {
#       metric_interval_lower_bound = 0
#       scaling_adjustment = -1
#     }
#   }

#   depends_on = ["aws_appautoscaling_target.target"]
# }

# /* metric used for auto scale */
# resource "aws_cloudwatch_metric_alarm" "service_cpu_high" {
#   alarm_name          = "${var.environment}_rails_terraform_web_cpu_utilization_high"
#   comparison_operator = "GreaterThanOrEqualToThreshold"
#   evaluation_periods  = "2"
#   metric_name         = "CPUUtilization"
#   namespace           = "AWS/ECS"
#   period              = "60"
#   statistic           = "Maximum"
#   threshold           = "85"

#   dimensions = {
#     ClusterName = "${aws_ecs_cluster.cluster.name}"
#     ServiceName = "${aws_ecs_service.web.name}"
#   }

#   alarm_actions = ["${aws_appautoscaling_policy.up.arn}"]
#   ok_actions    = ["${aws_appautoscaling_policy.down.arn}"]
# }
